# utxo-workshop

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  update.sh
.github/workflows/: runtime-tests.yml
node/: Cargo.toml  build.rs
node/sha3pow/: Cargo.toml
node/sha3pow/src/: lib.rs
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  pow.rs  service.rs
runtime/: Cargo.toml  build.rs
runtime/src/: block_author.rs  difficulty.rs  issuance.rs  lib.rs  template.rs  utxo.rs
runtime/wasm/: Cargo.toml  build.sh
runtime/wasm/src/: lib.rs
src/: chain_spec.rs  cli.rs  main.rs  service.rs
ux-demo/: index.js  package.json
