[package]
authors = ['Parity Technologies <admin@parity.io>']
build = 'build.rs'
edition = '2018'
name = 'utxo'
version = '2.0.0'

[[bin]]
name = 'utxo'
path = 'src/main.rs'

[dependencies]
derive_more = "0.15.0"
futures = "0.1"
ctrlc = { version = "3.1.3", features = ["termination"] }
log = "0.4"
tokio = "0.1.22"
exit-future = "0.1"
parking_lot = "0.9.0"
parity-scale-codec = "1.0.6"
trie-root = "0.15.2"

aura = { package = "substrate-consensus-aura", git = "https://github.com/paritytech/substrate.git", branch = "master"  }
aura-primitives = { package = "substrate-consensus-aura-primitives", git = "https://github.com/paritytech/substrate.git", branch = "master"  }

grandpa = { package = "substrate-finality-grandpa", git = "https://github.com/paritytech/substrate.git", branch = "master" }
grandpa-primitives = { package = "substrate-finality-grandpa-primitives", git = "https://github.com/paritytech/substrate.git", branch = "master" }

sr-primitives = { package = "sr-primitives", git = "https://github.com/paritytech/substrate.git", branch = "master" }

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
branch = 'master'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
branch = 'master'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
branch = 'master'

[dependencies.utxo-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
branch = 'master'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
branch = 'master'


[build-dependencies]
vergen = '3'
