[package]
authors = ['Anonymous']
build = 'build.rs'
edition = '2018'
name = 'utxo-workshop'
repository = 'https://github.com/substrate-developer-hub/utxo-workshop'
version = '2.0.0-rc6'

[build-dependencies]
substrate-build-script-utils = '2.0.0-rc6'

[dependencies.utxo-runtime]
path = '../runtime'
version = '2.0.0-rc6'

[dependencies]
futures = '0.3.1'
log = '0.4.8'
structopt = '0.3.8'
parity-scale-codec = '1.3.0'
sha3 = "0.8"
rand = { version = "0.7", features = ["small_rng"] }
sc-consensus-pow = '0.8.0-rc6'
sc-basic-authorship = '0.8.0-rc6'
sc-cli = '0.8.0-rc6'
sc-client-api = '2.0.0-rc6'
sc-consensus = '0.8.0-rc6'
sc-executor = '0.8.0-rc6'
sc-network = '0.8.0-rc6'
sc-service = '0.8.0-rc6'
sc-transaction-pool = '2.0.0-rc6'
sp-api = '2.0.0-rc6'
sp-blockchain = '2.0.0-rc6'
sp-consensus = '0.8.0-rc6'
sp-consensus-pow = '0.8.0-rc6'
sp-core = '2.0.0-rc6'
sp-inherents = '2.0.0-rc6'
sp-runtime = '2.0.0-rc6'
sp-timestamp = '2.0.0-rc6'
sp-transaction-pool = '2.0.0-rc6'
sha3pow = {path = './sha3pow'}
hex = "0.4"

[[bin]]
name = 'utxo-workshop'
