[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
homepage = 'https://substrate.dev'
name = 'utxo-runtime'
repository = 'https://github.com/substrate-developers-hub/utxo-workshop'
version = '2.0.0-alpha.5'

[dependencies.balances]
default-features = false
package = 'pallet-balances'
version = '2.0.0-alpha.5'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.2.0'

[dependencies.frame-executive]
default-features = false
version = '2.0.0-alpha.5'

[dependencies.frame-support]
default-features = false
version = '2.0.0-alpha.5'

[dependencies.randomness-collective-flip]
default-features = false
package = 'pallet-randomness-collective-flip'
version = '2.0.0-alpha.5'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sp-api]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.sp-block-builder]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.sp-consensus-pow]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.sp-inherents]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.sp-offchain]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.sp-session]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.sp-transaction-pool]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.sp-version]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.sudo]
default-features = false
package = 'pallet-sudo'
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.system]
default-features = false
package = 'frame-system'
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.timestamp]
default-features = false
package = 'pallet-timestamp'
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.transaction-payment]
default-features = false
package = 'pallet-transaction-payment'
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dev-dependencies]
hex-literal = "0.2.1"

[build-dependencies]
substrate-wasm-builder-runner = '1.0.5'

[features]
default = ['std']
std = [
    'balances/std',
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'randomness-collective-flip/std',
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-pow/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-io/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'sudo/std',
    'system/std',
    'timestamp/std',
    'transaction-payment/std',
]
