[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
homepage = 'https://substrate.dev'
name = 'utxo-runtime'
repository = 'https://github.com/substrate-developers-hub/utxo-workshop'
version = '2.0.0-rc2'

[dependencies.balances]
default-features = false
package = 'pallet-balances'
version = '2.0.0-rc2'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.2.0'

[dependencies.frame-executive]
default-features = false
version = '2.0.0-rc2'

[dependencies.frame-support]
default-features = false
version = '2.0.0-rc2'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sp-api]
default-features = false
version = '2.0.0-rc2'

[dependencies.sp-block-builder]
default-features = false
version = '2.0.0-rc2'

[dependencies.sp-consensus-pow]
default-features = false
version = '0.8.0-rc2'

[dependencies.sp-core]
default-features = false
version = '2.0.0-rc2'

[dependencies.sp-inherents]
default-features = false
version = '2.0.0-rc2'

[dependencies.sp-io]
default-features = false
version = '2.0.0-rc2'

[dependencies.sp-offchain]
default-features = false
version = '2.0.0-rc2'

[dependencies.sp-runtime]
default-features = false
version = '2.0.0-rc2'

[dependencies.sp-session]
default-features = false
version = '2.0.0-rc2'

[dependencies.sp-std]
default-features = false
version = '2.0.0-rc2'

[dependencies.sp-transaction-pool]
default-features = false
version = '2.0.0-rc2'

[dependencies.sp-version]
default-features = false
version = '2.0.0-rc2'

[dependencies.sudo]
default-features = false
package = 'pallet-sudo'
version = '2.0.0-rc2'

[dependencies.system]
default-features = false
package = 'frame-system'
version = '2.0.0-rc2'

[dependencies.timestamp]
default-features = false
package = 'pallet-timestamp'
version = '2.0.0-rc2'

[dev-dependencies]
hex-literal = "0.2.1"

[build-dependencies]
substrate-wasm-builder-runner = '1.0.5'

[features]
default = ['std']
std = [
    'balances/std',
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-pow/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-io/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'sudo/std',
    'system/std',
    'timestamp/std',
]
