[package]
authors = ['Anonymous']
edition = '2018'
name = 'sha3pow'
version = '2.0.0-rc6'

[dependencies]
parity-scale-codec = '1.3.0'
sha3 = "0.8"
rand = { version = "0.7", features = ["small_rng"] }
sc-consensus = '0.8.0-rc6'
sc-consensus-pow = '0.8.0-rc6'
sc-client-api = '2.0.0-rc6'
sp-api = '2.0.0-rc6'
sp-blockchain = '2.0.0-rc6'
sp-consensus-pow = '0.8.0-rc6'
sp-core = '2.0.0-rc6'
sp-runtime = '2.0.0-rc6'
