[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'utxo-runtime-wasm'
version = '2.0.0'

[lib]
crate-type = ["cdylib"]

[dependencies.utxo-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['utxo-runtime/std']

[profile.release]
lto = true
panic = 'abort'

[workspace]
members = []
